# emv

./: .gitignore  CMakeLists.txt  anotated_pileup.cc  em.cc  em.h  errlumina  finiteem.cc  finiteem.h  foo.bam  foo.bam.bai  foo.sam  foo.txt  genotype.cc  genotype.h  gt_matrix.cc  gt_matrix.h  meep.cc  meep_math.cc  meep_math.h  notes.txt  pileup.cc  pileup.h  plpdata.cc  plpdata.h  popstatem.cc  popstatem.h  reftype.cc  reftype.h  samio.cc  samio.h  seqem.cc  seqem.h  tuple_print.cc  tuple_print.h  vcaller.cc  vcaller.h
